# sms-gateway-rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  app_config.defaults.yaml  app_config.example.yaml  app_config.yaml  app_config2.yaml  build.sh
src/: app_config.rs  classifier.rs  dto.rs  error.rs  filter.rs  main.rs  telegram.rs
src/dto/: classifier.rs  notification.rs  sms_message.rs  telegram.rs
