[package]
name = "sms-gateway-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2" , features = ["json"]}
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = [] }
serde_json = "1.0.107"
config = "0.13.3"
time = { version = "0.3.28", features = ["parsing", "serde-human-readable"] }
reqwest = { version = "0.11.23", features = ["json"] }
log = "0.4.20"
env_logger = "0.10.0"
anyhow = "1.0.75"
